# agent-collab

./: .gitignore  README.md  collab  executor.py  orchestrator.py  plan_ui.py  planner.py  pyproject.toml  router.py
agent_collab/: __init__.py  cli.py  config.yaml  executor.py  file_ref.py  model_selector.py  plan_ui.py  planner.py  resume_ui.py  router.py  session_store.py
agent_collab/agents/: __init__.py  base.py  claude_agent.py  codex_agent.py
agent_collab/research/: __init__.py  check_log.py  display.py  gpu_manager.py  memory.py  monitor.py  parallel_pool.py  report_generator.py  research_mode.py  state.py  steps.py
agents/: base.py  claude_agent.py  codex_agent.py
research/: display.py  parallel_pool.py  research_mode.py  state.py  steps.py
